Static Override local objects BUG #91254

Closed
opened 2021-09-08 11:43:01 +02:00 by Aleksandr · 9 comments

System Information
Operating system: Linux-5.11.0-27-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02

Blender Version
Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: b7205031ce
Worked: (newest version of Blender that worked as expected)

Short description of error
2.93: Static Override reset objects after making objects local and joined to single mesh.
3:2: Static Override deletes objects after making objects local and joined to single mesh.
Screencast-2021-09-08_12.38.59.mp4

Exact steps for others to reproduce the error

  • In a new file, delete all objects.
  • Link collection "1" from my file Library.blend,
  • select linked object and make "Library Override" ({nav Object > Relations > Make Library Override...}),
  • Select the objects equivalent to the head, eyes and nose and make them "local" ({nav Object > Relations > Make Local...})
  • Edit the objects . select the eyes and nose for example, join then ({key CTRL J}), change materials ...
  • Save file,
  • File - Revert.
    2.93: Objects has been reset to the linked and modified objects was deleted.
    3.2: The object equivalent to the head has been deleted.

Library.blend

**System Information** Operating system: Linux-5.11.0-27-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.57.02 **Blender Version** Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: `b7205031ce` Worked: (newest version of Blender that worked as expected) **Short description of error** 2.93: Static Override reset objects after making objects local and joined to single mesh. 3:2: Static Override deletes objects after making objects local and joined to single mesh. [Screencast-2021-09-08_12.38.59.mp4](https://archive.blender.org/developer/F10385197/Screencast-2021-09-08_12.38.59.mp4) **Exact steps for others to reproduce the error** - In a new file, delete all objects. - Link collection "1" from my file `Library.blend`, - select linked object and make "Library Override" ({nav Object > Relations > Make Library Override...}), - Select the objects equivalent to the head, eyes and nose and make them "local" ({nav Object > Relations > Make Local...}) - Edit the objects . select the eyes and nose for example, join then ({key CTRL J}), change materials ... - Save file, - File - Revert. 2.93: Objects has been reset to the linked and modified objects was deleted. 3.2: The object equivalent to the head has been deleted. [Library.blend](https://archive.blender.org/developer/F10385196/Library.blend)
Author

Added subscriber: @viadvena

Added subscriber: @viadvena
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Revisiting old reports - (Apparently this report went unnoticed).

I can replicate the reported bug in version 2.93.6

In version 3.2 there was a different problem. One of the local meshes disappeared:
image.png

Being different or not, there's a bug there, so I'm confirming it.

Revisiting old reports - (Apparently this report went unnoticed). I can replicate the reported bug in version 2.93.6 In version 3.2 there was a different problem. One of the local meshes disappeared: ![image.png](https://archive.blender.org/developer/F12842429/image.png) Being different or not, there's a bug there, so I'm confirming it.

Added subscriber: @mont29

Added subscriber: @mont29

Making sub-data from an override hierarchy local is supported (although not really recommended, since it can back-fire quite easily).

But merging objects that are in an override collection is not supported at all, and never will be, since you are basically modifying the amount of objects in it. Here in master I do not seem to be loosing any object somehow, but this is undefined behavior by definition. Will add code to prevent joining (and other kind of indirect deletion) such objects in override collections.

Note that you can easily reset your override to a valid state using the resync enforce option from the Outliner contextual menu (on the root 1 collection).

Making sub-data from an override hierarchy local is supported (although not really recommended, since it can back-fire quite easily). But merging objects that are in an override collection is not supported at all, and never will be, since you are basically modifying the amount of objects in it. Here in master I do not seem to be loosing any object somehow, but this is undefined behavior by definition. Will add code to prevent joining (and other kind of indirect deletion) such objects in override collections. Note that you can easily reset your override to a valid state using the resync enforce option from the Outliner contextual menu (on the root `1` collection).

This issue was referenced by e5a110719f

This issue was referenced by e5a110719ff0ea04cd138e4f60c74ff8fc164287

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-02-03 14:07:13 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91254
No description provided.