source/blender/blenkernel/intern/lib_override.c
@@ -3001,10 +3001,6 @@ void BKE_lib_override_library_main_update(Main *bmain)
 
 bool BKE_lib_override_library_id_is_user_deletable(struct Main *bmain, struct ID *id)
 {
-  if (!(ID_IS_LINKED(id) || ID_IS_OVERRIDE_LIBRARY(id))) {
-    return true;
-  }
-
   /* The only strong known case currently are objects used by override collections. */
   /* TODO: There are most likely other cases... This may need to be addressed in a better way at
    * some point. */
